# undone

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  HANDOFF.md  rust-analyzer.toml  task_plan.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: playtester.md  scene-writer.md  writing-reviewer.md
.claude/hooks/: post-edit-check.mjs
.claude/skills/egui-patterns/: SKILL.md
.claude/skills/floem-layout/: SKILL.md
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/rhai-language/: SKILL.md
.interface-design/: system.md
crates/undone-domain/: Cargo.toml
crates/undone-domain/src/: bounded_stat.rs  enums.rs  ids.rs  lib.rs  npc.rs  player.rs
crates/undone-expr/: Cargo.toml
crates/undone-expr/src/: eval.rs  lexer.rs  lib.rs  parser.rs
crates/undone-packs/: Cargo.toml
crates/undone-packs/src/: char_creation.rs  data.rs  lib.rs  loader.rs  manifest.rs  preset.rs  registry.rs  spawner.rs
crates/undone-packs/tests/: composure_required_id.rs
crates/undone-save/: Cargo.toml
crates/undone-save/src/: lib.rs
crates/undone-save/tests/: desire_save_compat.rs
crates/undone-scene/: Cargo.toml
crates/undone-scene/src/: effects.rs  engine.rs  lib.rs  loader.rs  reachability.rs  scene_ctx.rs  scheduler.rs  set_npc_name_tests.rs  simulator.rs  template_ctx.rs  types.rs
crates/undone-scene/tests/: desire_composure_acceptance.rs  expr_engine_acceptance.rs  prose_gate_acceptance.rs  read_prose_equivalence.rs  rhai_parity.rs
crates/undone-ui/: Cargo.toml
crates/undone-ui/src/: char_creation.rs  dev_ipc.rs  dev_panel.rs  game_state.rs  landing_page.rs  layout.rs  left_panel.rs  lib.rs  right_panel.rs  runtime_controller.rs  runtime_snapshot.rs  runtime_test_support.rs  saves_panel.rs  settings_panel.rs  signal_utils.rs  theme.rs  title_bar.rs
crates/undone-ui/src/char_creation/: buttons.rs  config.rs  contracts.rs  sections.rs  signals.rs  widgets.rs
crates/undone-world/: Cargo.toml
crates/undone-world/src/: game_data.rs  lib.rs  test_helpers.rs
docs/: content-schema.md  creative-direction.md  deepseek-writing-tool.md  engine-contract.md  player-experience-map.md  review-core.md  status.md  story-map.json  story-map.md  world.md  writer-core.md  writer-tech.md  writing-delegation.md  writing-guide.md  writing-samples.md
docs/arcs/: camila-opening.md  campus-opening.md  robin-opening.md  workplace-opening.md
docs/audits/: 2026-02-25-arc-flow-audit.md  2026-02-25-engineering-audit.md  2026-02-25-writing-design-audit.md  2026-03-07-engine-readiness-matrix.md  2026-03-07-writing-agent-tooling-audit.md
docs/characters/: cal.md  camila.md  jake.md  marcus.md  robin.md
docs/plans/: 2026-02-21-engine-design.md  2026-02-21-scaffold.md  2026-02-22-design-decisions.md  2026-02-22-npc-spawn-char-creation.md  2026-02-22-scene-engine-design.md  2026-02-22-scene-engine-impl.md  2026-02-22-setting-principles.md  2026-02-22-ui-floem.md  2026-02-23-engine-correctness-design.md  2026-02-23-engine-correctness.md  2026-02-23-engine-foundation.md  2026-02-23-engineering-batch.md  2026-02-23-engineering-hardening-2.md  2026-02-23-engineering-tasks-design.md  2026-02-23-engineering-tasks-plan.md  2026-02-23-overnight-autonomous.md  2026-02-23-pc-origin-system-design.md  2026-02-23-pc-origin-system.md  2026-02-23-rust-mcp-migration.md  2026-02-24-char-creation-redesign.md  2026-02-24-engine-routes-foundation.md  2026-02-24-playtest-fixes.md  2026-02-24-prolific-session.md  2026-02-25-char-creation-ui-attributes.md  2026-02-25-sprint-roadmap.md  2026-02-25-sprint1-engine-works.md  2026-02-26-sprint2-femininity-moves.md  2026-02-26-sprint3-robins-playable-loop.md  2026-03-03-npc-sidebar-redesign-ux.md  2026-03-06-deepseek-writing-infra-design.md  2026-03-06-deepseek-writing-infra.md  2026-03-07-ironclad-engine-hardening.md  2026-03-08-dev-tooling-cleanup.md  2026-03-08-dev-tooling-design.md  2026-03-08-dev-tooling-plan.md  2026-03-08-prolific-writing-plan.md  2026-03-08-prolific-writing-session.md  2026-03-08-writing-register-calibration.md  2026-03-09-playable-game-fixes.md  2026-03-10-player-correctness-design.md  (+22 more)
docs/presets/: camila.md  robin.md
docs/prompts/: 2026-03-07-engineering-fresh-session-prompt.md  2026-03-07-ironclad-engine-next-session-prompt.md  2026-03-08-robin-opening-writing-session.md
docs/research/: 2026-03-07-writing-context-lorebooks-and-caching.md  similar-games.md
packs/base/: pack.toml  roadmap.toml
packs/base/data/: arcs.toml  categories.toml  names.toml  npc_traits.toml  races.toml  schedule.toml  skills.toml  stats.toml  traits.toml
packs/base/scenes/: bad_date.toml  bar_closing_time.toml  bar_stranger_night.toml  bookstore.toml  camila_arrival.toml  camila_call_raul.toml  camila_dining_hall.toml  camila_dorm.toml  camila_library.toml  camila_orientation.toml  camila_study_session.toml  (+77 more)
src/: lib.rs  main.rs  story_map.rs  validate_pack.rs
tests/: npc_liking_at_least.rs  preset_integration.rs  prose_audit.rs  story_map_acceptance.rs  story_map_independent.rs  validate_pack_simulation.rs
tools/: Cargo.toml  deepseek-helper.mjs  deepseek-helper.test.mjs  mcp-launcher.mjs  mcp-launcher.sh  migrate-effects.py  pack-prompt.mjs  prose-lint.mjs  prose-to-toml.mjs  rebuild-mcp.ps1  scene-pipeline.mjs  spec-validate.mjs
tools/game-input-mcp/: Cargo.toml
tools/game-input-mcp/src/: dev_client.rs  input.rs  lib.rs  main.rs  server.rs  ui_audit.rs
tools/minijinja-mcp-server/: Cargo.toml
tools/minijinja-mcp-server/src/: main.rs  server.rs  validator.rs
tools/rhai-mcp-server/: Cargo.toml
tools/rhai-mcp-server/src/: main.rs  server.rs  validator.rs
tools/rust-mcp/: Cargo.toml
tools/rust-mcp/src/: lib.rs  main.rs
tools/rust-mcp/src/analyzer/: client.rs  mod.rs  protocol.rs
tools/rust-mcp/src/server/: handler.rs  mod.rs  parameters.rs
tools/rust-mcp/src/tools/: advanced.rs  analysis.rs  cargo.rs  formatting.rs  generation.rs  mod.rs  navigation.rs  quality.rs  refactoring.rs  types.rs
tools/screenshot-mcp/: Cargo.toml
tools/screenshot-mcp/src/: capture.rs  main.rs  server.rs
(+69 files in other folders)
