[package]
name    = "undone-expr"
version = "0.1.0"
edition = "2021"

[dependencies]
undone-domain = { path = "../undone-domain" }
undone-world  = { path = "../undone-world" }
undone-packs  = { path = "../undone-packs" }
thiserror     = { workspace = true }
rand          = { workspace = true }

[dev-dependencies]
slotmap = { workspace = true }
