[package]
name    = "undone-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
undone-domain = { path = "../undone-domain" }
undone-world  = { path = "../undone-world" }
undone-scene  = { path = "../undone-scene" }
undone-packs  = { path = "../undone-packs" }
floem            = { workspace = true }
lasso            = { workspace = true }
pulldown-cmark   = { workspace = true }
rand             = { workspace = true }
slotmap          = { workspace = true }
