[package]
name    = "undone-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
undone-domain = { path = "../undone-domain" }
undone-world  = { path = "../undone-world" }
undone-scene  = { path = "../undone-scene" }
undone-packs  = { path = "../undone-packs" }
undone-save   = { path = "../undone-save" }
log              = { workspace = true }
floem            = { workspace = true }
lasso            = { workspace = true }
pulldown-cmark   = { workspace = true }
rand             = { workspace = true }
slotmap          = { workspace = true }
dirs             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
