[package]
name = "game-input-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-input-mcp"
path = "src/main.rs"

[dependencies]
rmcp            = { version = "0.8", features = ["server", "transport-io"] }
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
schemars        = "1"
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
]
