[package]
name = "minijinja-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minijinja-mcp-server"
path = "src/main.rs"

[dependencies]
# Validate authored prose against the REAL method surface (the same REGISTRY-driven
# prose gate the game loader runs), so authoring-time prose validation matches
# load-time. undone-scene is GUI-free (undone-ui is above it), so this does not pull
# the floem dep tree; it's already built for this workspace by rhai-mcp-server.
undone-scene = { path = "../../crates/undone-scene" }
undone-packs = { path = "../../crates/undone-packs" }
rmcp = { version = "0.8", features = ["server", "transport-io"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
