[package]
name = "rhai-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhai-mcp-server"
path = "src/main.rs"

[dependencies]
# Validate against the REAL game engine surface (same build_engines + registry +
# load-time gate as the loader), so authoring-time validation matches load-time.
undone-scene = { path = "../../crates/undone-scene" }
undone-packs = { path = "../../crates/undone-packs" }
rmcp = { version = "0.8", features = ["server", "transport-io"] }
rhai = { version = "1", features = ["sync", "metadata"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
