[package]
name = "rust-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
