[package]
name = "screenshot-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screenshot-mcp"
path = "src/main.rs"

[dependencies]
rmcp            = { version = "0.8", features = ["server", "transport-io"] }
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
schemars        = "1"
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# windows-capture is Windows-only; see [target.'cfg(windows)'.dependencies] below
png             = "0.17"
image           = { version = "0.25", default-features = false, features = ["png"] }
base64          = "0.22"

[target.'cfg(windows)'.dependencies]
windows-capture = "1.5"
